--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 <!-- START PROJECTS SECTION -->
 
 <section id="projects" class="projects-section">
-  <h2 class="projects-section-header">These are some of my projects</h2>
+  <h2 class="projects-section-header">Here is one of my projects</h2>
 
   <div class="projects-grid">
     <a
-      href="https://codepen.io/freeCodeCamp/full/zNqgVx"
+      href="https://codepen.io/turstoncodes/pen/VoQqYN?editors=1000"
       target="_blank"
       class="project project-tile"
     >
@@ -61,86 +61,7 @@
         <span class="code">&#47;&gt;</span>
       </p>
     </a>
-    <a
-      href="https://codepen.io/freeCodeCamp/full/qRZeGZ"
-      target="_blank"
-      class="project project-tile"
-    >
-      <img
-        class="project-image"
-        src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/random-quote-machine.png"
-        alt="project"
-      />
-      <p class="project-title">
-        <span class="code">&lt;</span>
-        Random Quote Machine
-        <span class="code">&#47;&gt;</span>
-      </p>
-    </a>
-    <a
-      href="https://codepen.io/freeCodeCamp/full/wgGVVX"
-      target="_blank"
-      class="project project-tile"
-    >
-      <img
-        class="project-image"
-        src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/calc.png"
-        alt="project"
-      />
-      <p class="project-title">
-        <span class="code">&lt;</span>
-        JavaScript Calculator
-        <span class="code">&#47;&gt;</span>
-      </p>
-    </a>
-    <a
-      href="https://codepen.io/freeCodeCamp/full/mVEJag"
-      target="_blank"
-      class="project project-tile"
-    >
-      <img
-        class="project-image"
-        src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/map.jpg"
-        alt="project"
-      />
-      <p class="project-title">
-        <span class="code">&lt;</span>
-        Map Data Across the Globe
-        <span class="code">&#47;&gt;</span>
-      </p>
-    </a>
-    <a
-      href="https://codepen.io/freeCodeCamp/full/wGqEga"
-      target="_blank"
-      class="project project-tile"
-    >
-      <img
-        class="project-image"
-        src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/wiki.png"
-        alt="project"
-      />
-      <p class="project-title">
-        <span class="code">&lt;</span>
-        Wikipedia Viewer
-        <span class="code">&#47;&gt;</span>
-      </p>
-    </a>
-    <a
-      href="https://codepen.io/freeCodeCamp/full/KzXQgy"
-      target="_blank"
-      class="project project-tile"
-    >
-      <img
-        class="project-image"
-        src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/tic-tac-toe.png"
-        alt="project"
-      />
-      <p class="project-title">
-        <span class="code">&lt;</span>
-        Tic Tac Toe Game
-        <span class="code">&#47;&gt;</span>
-      </p>
-    </a>
+        
   </div>
 
   <a
@@ -158,29 +79,29 @@
 <section id="contact" class="contact-section">
   <div class="contact-section-header">
     <h2>Let's work together...</h2>
-    <p>How do you take your coffee?</p>
+    <p>and talk about the true nature of reality?</p>
   </div>
   <div class="contact-links">
     <a
-      href="https://facebook.com/freecodecamp"
+      href="#"
       target="_blank"
       class="btn contact-details"
       ><i class="fab fa-facebook-square"></i> Facebook</a
     >
     <a
       id="profile-link"
-      href="https://github.com/freecodecamp"
+      href="#"
       target="_blank"
       class="btn contact-details"
       ><i class="fab fa-github"></i> GitHub</a
     >
     <a
-      href="https://twitter.com/freecodecamp"
+      href="#"
       target="_blank"
       class="btn contact-details"
       ><i class="fab fa-twitter"></i> Twitter</a
     >
-    <a href="mailto:example@example.com" class="btn contact-details"
+    <a href="turstoncodes@example.com" class="btn contact-details"
       ><i class="fas fa-at"></i> Send a mail</a
     >
     <a href="tel:555-555-5555" class="btn contact-details"
@@ -200,8 +121,8 @@
   </p>
   <p>
     &copy; Created for
-    <a href="https://www.freecodecamp.com/" target="_blank"
-      >freeCodeCamp <i class="fab fa-free-code-camp"></i
+    <a href="https://www.louwfunctioning.com/" target="_blank"
+      >LouwFunctioning<i class=""></i
     ></a>
   </p>
 </footer>
